Lobby creation and display, Profile: get users games and lobbies
- creation of lobbies
- display of lobbies according to the selected game (paginated)
- post to get games data  (user-specific)
- post to get lobbies data (user-specific)
- minor fixes
