# swagger-output.json
@@ -29,8 +29,12 @@
       "description": "Profil użytkownika"
     },
     {
-      "name": "IkonyGier",
+      "name": "Strona Główna",
       "description": "Wysyłanie nazw i ścieżek obrazów"
+    },
+    {
+      "name": "Lobby",
+      "description": "Wyświetlanie, tworzenie, dołączanie do lobby"
     }
   ],
   "paths": {
@@ -161,123 +165,6 @@
                 }
               }
             }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          }
-        }
-      }
-    },
-    "/api/auth/signout":{
-      "get": {
-        "tags": [
-          "Logowanie"
-        ],
-        "summary": "Wylogowanie",
-        "description": "Wylogowanie z systemu",
-        "operationId": "Logout",
-        "parameters": [
-          {
-            "name": "status",
-            "in": "query",
-            "description": "Wyloguj się",
-            "required": false,
-            "explode": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "confirmationCode": {
-                  "type": "string",
-                  "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6ImphbmJyemVzemN6b3Q5QGdtYWlsLmNvbSIsImlhdCI6MTcxMjg1MTY5N30.46bEOEU4oqn7sS0Bt30erT5Iifm0AIc38hmA-MJHeJo"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          }
-        }
-      }
-    },
-    "/api/test/all":{
-      "get": {
-        "tags": [
-          "Weryfikacja"
-        ],
-        "summary": "Dostęp dla każdego",
-        "description": "Cześć strony do któej dostęp ma niezalogowany użytkownik",
-        "operationId": "verifyAll",
-        "responses": {
-          "200": {
-            "description": "Successful operation"
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          }
-        }
-      }
-    },
-    "/api/test/user":{
-      "get": {
-        "tags": [
-          "Weryfikacja"
-        ],
-        "summary": "Dostęp dla zalogowanych",
-        "description": "Część strony do której dostęp ma tylko zalogowany użytkownik",
-        "operationId": "verifyUser",
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/User"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input"
-          },
-          "422": {
-            "description": "Validation exception"
-          }
-        }
-      }
-    },
-    "/api/test/admin":{
-      "get": {
-        "tags": [
-          "Weryfikacja"
-        ],
-        "summary": "Dostęp dla admina",
-        "description": "Część strony do której dostęp ma tylko administrator",
-        "operationId": "verifyUser",
-        "parameters": [
-          {
-            "name": "email",
-            "in": "query",
-            "description": "Email konta administartora",
-            "required": true,
-            "explode": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation"
           },
           "400": {
             "description": "Invalid input"
@@ -1109,7 +996,7 @@
     "/api/mainGame/getGame": {
       "get": {
         "tags": [
-          "IkonyGier"
+          "Strona Główna"
         ],
         "summary": "Pobranie danych o grach na strone główną.",
         "description": "Pobiera nazwe i ścieżke do gier na stronę główną.",
@@ -1169,6 +1056,289 @@
           }
         }
       }
+    },
+    "/api/lobby/add":{
+      "post": {
+        "tags": [
+          "Lobby"
+        ],
+        "summary": "Tworzenie lobby",
+        "description": "Utworzenie lobby poprzez formularz",
+        "operationId": "createLobby",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Stwórz lobby!",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Lobby"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Lobby zostało pomyślnie stworzone",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Lobby successfully created"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "nie został znaleziony"
+          },
+          "500": {
+            "description": "Wewnętrzny błąd serwera"
+          }
+        }
+      }
+    },
+    "/api/lobby/show":{
+      "post": {
+        "tags": [
+          "Lobby"
+        ],
+        "summary": "Wyświetlenie lobby",
+        "description": "Wyświetlenie lobby paginacja po stronie serwera",
+        "operationId": "displayLobby",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Strona do wyświeltenia",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": "0"
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "description": "Ilość do wyświeltenia",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": "5"
+            }
+          },
+          {
+            "name": "game",
+            "in": "query",
+            "description": "Gra dla których wyświetlane są lobby",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": null
+            }
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "description": "Fraza która jest szukana w nazwie i opisie lobby",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": null
+            }
+          },
+          {
+            "name": "sorting",
+            "in": "query",
+            "description": "Nazwa kolumny po której tabela będzie sortowana rosnąco, naprzykład 'NeedUsers' wyświetla lobby z najmniejszą liczbą szukanych graczy",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": null
+            }
+          },
+          {
+            "name": "language",
+            "in": "query",
+            "description": "Nazwa języka jako filtr lobby",
+            "required": false,
+            "explode": true,
+            "schema": {
+              "type": "string",
+              "default": null
+            }
+          }
+        ],
+        "requestBody": {
+          "description": "Wyświetl lobby!",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/DisplayLobbies"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DisplayedLobby"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "422": {
+            "description": "Validation exception"
+          }
+        }
+      }
+    },
+    "/api/lobby/data":{
+      "get": {
+        "tags": [
+          "Lobby"
+        ],
+        "summary": "Pobranie danych",
+        "description": "Pobranie danych o grach i językach",
+        "operationId": "Pobranie danych",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LobbyData"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "422": {
+            "description": "Validation exception"
+          }
+        }
+      }
+    },
+    "/api/profile/usersLobby":{
+      "post": {
+        "tags": [
+          "Profil"
+        ],
+        "summary": "Pobranie danych o lobby",
+        "description": "Pobranie danych o lobby",
+        "operationId": "Pobranie danych",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Wyświetl lobby!",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Pagination"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DisplayedLobby"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "422": {
+            "description": "Validation exception"
+          }
+        }
+      }
+    },
+    "/api/profile/usersGames":{
+      "post": {
+        "tags": [
+          "Profil"
+        ],
+        "summary": "Pobranie danych o grach",
+        "description": "Pobranie danych o grach",
+        "operationId": "Pobranie danych",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "description": "Wyświetl gry!",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Pagination"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "shotname": {
+                      "type": "string",
+                      "example": "LOL"
+                    },
+                    "image": {
+                      "type": "string",
+                      "example": "./folder/minecraft.jpg"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input"
+          },
+          "422": {
+            "description": "Validation exception"
+          }
+        }
+      }
     }
   },  
   "components": {
@@ -1194,10 +1364,6 @@
           }
         }
       },
-
-
-    "schemas": {
-
       "User": {
         "type": "object",
         "properties": {
@@ -1227,8 +1393,100 @@
             "example": "12345678"
           }
         }
+      },
+      "LobbyData": {
+        "type": "object",
+        "properties": {
+          "Languages": {
+            "type": "string",
+            "example": "Polski"
+          },
+          "Games": {
+            "type": "string",
+            "example": "VALORANT"
+          }
+        }
+      },
+      "Lobby": {
+        "type": "object",
+        "properties": {
+          "gameName": {
+            "type": "string",
+            "example": "VALORANT"
+          },
+          "Name": {
+            "type": "string",
+            "example": "Mid i Top do Clasha"
+          },
+          "Description": {
+            "type": "string",
+            "example": "Potrzebnych 2 graczy do najbliższego clasha"
+          },
+          "language": {
+            "type": "string",
+            "example": "Polski"
+          },
+          "NeedUsers": {
+            "type": "string",
+            "example": "3"
+          }
+        }
+      },
+      "DisplayedLobby": {
+        "type": "object",
+        "properties": {
+          "ID_LOBBY": {
+            "type": "string",
+            "example": "1"
+          },
+          "Name": {
+            "type": "string",
+            "example": "Mid i Top do Clasha"
+          },
+          "Description": {
+            "type": "string",
+            "example": "Potrzebnych 2 graczy do najbliższego clasha"
+          },
+          "NeedUsers": {
+            "type": "string",
+            "example": "3"
+          },
+          "ownerAvatar": {
+            "type": "string",
+            "example": "/img/nickname"
+          },
+          "playerCount": {
+            "type": "string",
+            "example": "0"
+          },
+          "Pages": {
+            "type": "string",
+            "example": "12"
+          }
+        }
+      },
+      "DisplayLobbies": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "1"
+          }
+        }
+      },
+      "Pagination": {
+        "type": "object",
+        "properties": {
+          "page": {
+            "type": "string",
+            "example": "0"
+          },
+          "size": {
+            "type": "string",
+            "example": "20"
+          }
+        }
       }
-    }
   }
   }
 }
